Fix margin alignment in eww.scss and powermenu/eww.scss

--- a/home/dot_config/eww/dashboard/eww.scss
+++ b/home/dot_config/eww/dashboard/eww.scss
@@ -256,13 +256,13 @@ scale trough highlight {
 .mailbox {
   background-color: $color15;
   border-radius: 10px;
-  margin: 48px 0px 48px 0px;
+  margin: 48px 0px 48px -32px;
 }
 .label_mails {
   color: $color8;
   font-size: 32px;
   font-weight: bold;
-  margin: 0px 12px 0px 12px;
+  margin: 0px 12px 0px -32px;
 }
 
 /** Power buttons ***************************************/
