--- a/home/dot_config/eww/powermenu/eww.scss
+++ b/home/dot_config/eww/powermenu/eww.scss
@@ -48,14 +48,14 @@
   color: $color11;
   font-size: 40px;
   font-weight: bold;
-  margin: 20px 0px 0px 0px;
+  margin: 20px 0px 0px -32px;
 }
 
 .time_day {
   color: $color12;
   font-size: 30px;
   font-weight: normal;
-  margin: 0px 0px 20px 0px;
+  margin: 0px 0px 20px -32px;
 }
 
 /** Uptime ********************************************/
